# test_work

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_tasks.py
app/: config.py  database.py  exceptions.py  main.py
app/api/: deps.py  errors.py
app/api/v1/: tasks.py
app/messaging/: publisher.py
app/models/: __init__.py  task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: task_service.py  transitions.py
app/worker/: __main__.py  processor.py  worker.py
tests/: conftest.py
tests/integration/: test_tasks_api.py
tests/unit/: test_processor.py  test_publisher.py  test_task_service.py  test_transitions.py  test_worker.py
